# StringWalk

./: README.md  pyproject.toml  requirements.txt  testing.json
src/stringwalk/: __main__.py
src/stringwalk/gui/: mainMenu.py  settingsMenu.py
src/stringwalk/gui/settings/: langSelect.py
src/stringwalk/i18n/: en.json  nl.json
src/stringwalk/utility/: configHandler.py  jsonParser.py  languageHandler.py  projectNameHandler.py  textHandler.py
